--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://avidev1234.github.io/react-map",
+  "homepage": "https://Avidev1234.github.io/react-map",
   "name": "test",
   "private": true,
   "version": "0.0.0",
